--- a/css/style.css
+++ b/css/style.css
@@ -153,8 +153,19 @@
 
 /* Main */
 .main{
-    height: 300px;
+    padding: 12px 0 150px 0;
 }
+
+.main .title{
+    font-size: 24px;
+    color: #424242;
+    text-align: center;
+    padding: 36px 0;
+}
+
+
+
+
 
 /* Footer */
 .footer{
