--- a/css/style.css
+++ b/css/style.css
@@ -153,15 +153,65 @@
 
 /* Main */
 .main{
-    padding: 12px 0 150px 0;
+    padding: 12px 0 75px 0;
+    background-color: #f5f5f5;
 }
 
+/* title */
 .main .title{
     font-size: 24px;
     color: #424242;
     text-align: center;
     padding: 36px 0;
 }
+
+/* .record */
+.main .record{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    width: 95%;
+    max-width: 625px;
+    margin: 0 auto 16px;
+    height: 62px;
+    border-left: 7px solid #86D73F;
+    padding: 0 12px;
+}
+.record-detail{
+    display: flex;
+    align-items: center;
+}
+.record-name, .record-num{
+    font-size: 20px;
+    color: #4A4A4A;
+}
+.record-num{
+    margin-left: 7px;
+}
+.record-label{
+    font-size: 12px;
+    color: #424242;
+}
+
+
+/* 不同BMI邊邊顏色不同 */
+.record.light{
+    border-color: #31BAF9;
+}
+.record.normal{
+    border-color: #86D73F;
+}
+.record.over{
+    border-color: #FF982D;
+}
+.record.fat{
+    border-color: #FF6C03;
+}
+.record.toofat{
+    border-color: #FF1200;
+}
+
 
 
 
