--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
 /* Header */
 .header{
     display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
     align-items: center;
     height: 300px;
     background-color: #424242;
